--- a/templates/render_image.html
+++ b/templates/render_image.html
@@ -11,6 +11,10 @@
     <form action="/next" method="POST">
         <input type="hidden" id="x" name="normalized_x"/>
         <input type="hidden" id="y" name="normalized_y"/>
+        <input type="radio" name="direction" value="0"/><label>Left</label>
+        <input type="radio" name="direction" value="1"/><label>Right</label>
+        <input type="radio" name="direction" value="2"/><label>Far</label>
+        <input type="radio" name="direction" value="3"/><label>Near</label>
         <input type="submit" value="Next image"/>
     </form>
 
